--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,6 @@ pre {
   padding: 10px;
 }
 
-.hidden {
-  visibility: hidden;
-  height: 0;
-}
-
 /* Navbar */
 .navbar {
   background-color: var(--primary-color);
@@ -218,9 +213,17 @@ pre {
   justify-self: flex-end;
 }
 
+.features-head .grid {
+  animation: slideInFromLeft 1s ease-in;
+}
+
 .features-sub-head img {
   width: 300px;
   justify-self: flex-end;
+}
+
+.features-sub-head .grid {
+  animation: slideInFromRight 1s ease-in;
 }
 
 .features-main .card > i {
@@ -229,6 +232,7 @@ pre {
 
 .features-main .grid {
   padding: 30px;
+  animation: slideInFromBottom 1s ease-in;
 }
 
 .features-main .grid > *:first-child {
@@ -240,6 +244,10 @@ pre {
 }
 
 /* Docs */
+.docs-head .grid {
+  animation: slideInFromLeft 1s ease-in;
+}
+
 .docs-main h3 {
   margin: 20px 0;
 }
@@ -261,6 +269,10 @@ pre {
 
 .docs-main .btn:hover {
   font-weight: 300;
+}
+
+.docs-main .grid {
+  animation: slideInFromBottom 1s ease-in;
 }
 
 /* Footer */
@@ -362,6 +374,18 @@ pre {
   .features-main .grid > *:first-child,
   .features-main .grid > *:nth-child(2) {
     grid-column: 1;
+  }
+
+  .features-head .grid {
+    animation: slideInFromTop 1s ease-in;
+  }
+
+  .features-sub-head .grid {
+    animation: slideInFromBottom 1s ease-in;
+  }
+
+  .docs-head .grid {
+    animation: slideInFromTop 1s ease-in;
   }
 }
 
