--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,11 @@ pre {
 /* Footer */
 .footer .social a {
   margin: 0 10px;
+  color: #b3b3b3;
+}
+
+.footer .social a:hover {
+  color: #fff;
 }
 
 /* Animations */
